--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "fb": "^2.0.0",
+    "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.8"
   }
 }
