--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "express": "^4.15.4",
     "fb": "^2.0.0",
     "jsonwebtoken": "^7.4.3",
-    "mongoose": "^4.11.8"
+    "mongoose": "^4.11.8",
+    "multer": "^1.3.0"
   }
 }
